Adding New Countries

--- a/tanzania/tanzania-qa.properties
+++ b/tanzania/tanzania-qa.properties
@@ -2,4 +2,4 @@ rate=1.65
 lanecount=3
 environment: default
 hello-word: "Bonjuor Monseur, From QA"
-tribes: Hutu,Tutsi,Twa
+tribes: Alagwa,Akiek,Akie,Arusha,Assa,Barabaig,Balouch,Bembe
