Added DB settings

--- a/customerservice/application-dev.properties
+++ b/customerservice/application-dev.properties
@@ -1,10 +1,8 @@
-default-engine:fop
-currency: UGSH
-number-plate-innitial:U
-population:30000000
-rate=1.55
-tollstart:05:00
-tollstop:22:00
-lanecount=0
-
-
+spring.profiles.active=dev
+environment.name = DEV Environment
+spring.datasource.url=jdbc:mysql://localhost:3306/customers
+spring.datasource.username=root
+spring.datasource.password=
+spring.jpa.database=MYSQL
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
