--- a/customerservice/application-dev.properties
+++ b/customerservice/application-dev.properties
@@ -5,4 +5,4 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.database=MYSQL
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=ddl-auto
