--- a/paymentsservice/paymentsservice-dev.properties
+++ b/paymentsservice/paymentsservice-dev.properties
@@ -5,4 +5,4 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.database=MYSQL
 spring.jpa.show-sql=true
-
+hibernate.hbm2ddl.auto=update
