--- a/customerservice/customerservice-dev.properties
+++ b/customerservice/customerservice-dev.properties
@@ -1,5 +1,5 @@
 spring.profiles.active=dev
-environment.name = DEV Environment
+environment.name = Dev Environment
 spring.datasource.url=jdbc:mysql://localhost:3306/customers
 spring.datasource.username=root
 spring.datasource.password=
