--- a/customerservice/customerservice-dev.properties
+++ b/customerservice/customerservice-dev.properties
@@ -5,4 +5,5 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.database=MYSQL
 spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
 
