--- a/kafkaproducerservice/kafkaproducerservice-dev.properties
+++ b/kafkaproducerservice/kafkaproducerservice-dev.properties
@@ -5,4 +5,5 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.database=MYSQL
 spring.jpa.show-sql=true
-
+server.port= 7010
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
