--- a/kafkaproducerservice/kafkaproducerservice-dev.properties
+++ b/kafkaproducerservice/kafkaproducerservice-dev.properties
@@ -6,4 +6,5 @@ spring.datasource.password=
 spring.jpa.database=MYSQL
 spring.jpa.show-sql=true
 server.port= 7010
+kafka.server.url=localhost:9092
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
