--- a/kafkaconsumerservice/kafkaconsumerservice-dev.properties
+++ b/kafkaconsumerservice/kafkaconsumerservice-dev.properties
@@ -6,3 +6,6 @@ spring.datasource.password=
 spring.jpa.database=MYSQL
 spring.jpa.show-sql=true
 
+server.port=7011
+kafka.server.url=localhost:9092
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
