--- a/kafkaconsumerservice/kafkaconsumerservice-dev.properties
+++ b/kafkaconsumerservice/kafkaconsumerservice-dev.properties
@@ -8,4 +8,5 @@ spring.jpa.show-sql=true
 
 server.port=7011
 kafka.server.url=localhost:9092
+kafka.group.id=dummygroupid
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
